src/styles/styles.css
@font-face {
    font-family: technology;
    src: url(../fonts/technology/Technology.ttf);
    font-weight: normal;
}

@font-face {
    font-family: roboto;
    src: url(../fonts/Roboto-1/Roboto-VariableFont_wdth\,wght.ttf);
    font-weight: normal;
}

li {
    list-style: none;
}

main {
    background-image: url(../images/mosaic.png);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.calculator-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: fit-content;
    padding: 10px;
    gap: 10px;

    background-repeat: repeat;
}

.instructor {
    align-items: center;
    justify-content: center;
    text-align: center;
    max-height: 25rem;
    max-width: auto;
    padding: 1rem;
    gap: 10px;
    border-radius: 10px;
    background-color: #f8c928;
    border-style: solid;
    border-color: #000;
    font-family: roboto;
}

.instructor h3 {
    width: auto;
    font-size: 20px;
    background-color: #000;
    font-size: larger;
    color: #f8c928;
}

.instructor .stripes {
    height: 70px;
    border-top: 8px solid #000;
    border-left: 8px solid #000;
    border-right: 8px solid #000;
    border-bottom: 8px solid #000;

    background:
        repeating-linear-gradient(-45deg,
            #000 0px,
            #000 28px,
            #f8c928 28px,
            #f8c928 56px);
}

.calculator {
    display: flex;
    flex-direction: column;
    width: 20rem;
    background-color: #040308;
    border-radius: 15px;
    border-style: double;
    border-color: #9e9fa0;
    /*box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);*/
    box-shadow: 10px 10px 50px #000;
    padding: 20px;
    gap: 10px;
}

.calcTop {
    display: flex;
    align-items: center;
    gap: 10px;
}

.calcLogo img {
    width: auto;
    height: 50px;
    object-fit: contain;
}

.calcDisplay {
    background-color: #cfe2e6;
    width: 100%;
    height: 50px;
    margin-left: auto;
    text-align: right;
    font-size: 2.5rem;
    padding: 10px;
    padding-left: 2rem;
    padding-right: 0.5rem;
    border: none;
    box-shadow: 5px 5px 1px #9bb5ba inset;
    border-radius: 10px;
    box-sizing: border-box;
    min-width: 0;
    overflow-x: scroll;
    white-space: nowrap;
    font-family: technology;
}

.calcScroll {
    margin-left: auto;
    display: flex;
    gap: 5px;
}

.display-wrapper {
    position: relative;
    width: 100%;
}

.operator-indicator {
    position: absolute;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    font-family: technology;
    font-size: 1.5rem;
    color: #555;
    pointer-events: none;
}

.scrollBtn {
    background-color: #26252a;
    border: none;
    color: #fff;
    font-size: 1rem;
    width: 30px;
    height: 30px;
    border-radius: 8px;
    cursor: pointer;
}

.scrollBtn:hover {
    background-color: #5d5b62;
    transform: scale(1.1);
}

.scrollBtn:active {
    transform: scale(0.95);
}

.calcButtons {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    font-family: roboto;
    padding-top: 10px;
    gap: 10px;
}

.buttonNum {
    background-color: #26252a;
    border: none;
    font-size: 1.5rem;
    padding: 20px;
    cursor: pointer;
    border-radius: 10px;
    border-radius: 10px;
    color: #fff;
}

.buttonNum:hover {
    background-color: #5d5b62;
    transform: scale(1.1);
}

.buttonNum:active {
    transform: scale(0.95);
}

.buttonClear {
    background-color: #cf2c0c;
    border-color: transparent;
    font-size: 1.5rem;
    border-radius: 10px;
    color: #fff;
}

.buttonClear:hover {
    background-color: #fd350e;
    transform: scale(1.1);
}

.buttonClear:active {
    transform: scale(0.95);
}

.buttonOperator {
    background-color: #65686f;
    border-color: transparent;
    border-radius: 10px;
    font-size: 1.5rem;
    color: #fff;
}

.buttonOperator:hover {
    background-color: #a0a1a7;
    transform: scale(1.1);
}

.buttonOperator:active {
    transform: scale(0.95);
}

.calcDisplay.errorMessage {
    text-align: left;
    font-size: 0.5rem;
    letter-spacing: -0.02em;
    object-fit: cover;

}

.operation-overview {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    max-height: 25rem;
    max-width: auto;
    padding: 1rem;
    gap: 10px;
    background-color: #fff;
    border: solid 5px #000;
    overflow: scroll;
    color: #000;
    font-family: roboto;
    overflow-y: scroll;
    scrollbar-color: #000 #fff;
}

.operation-overview h2 {
    padding: 10px;
    background-color: #000;
    color: #fff;
}

.operation-preview {
    background-color: #000;
    color: #fff;
}

.calculation-history {

    padding-left: auto;
    background-color: #000;
    color: #fff;
    text-align: center;
}

.resetHistory {
    background-color: #000;
    color: #fff;
    padding: 10px;
    border-radius: 10px;
    border-style: none;
    font-family: roboto;
    margin-bottom: 10px;
}

.resetHistory:hover {
    transform: scale(1.1);
}

.resetHistory:active {
    transform: scale(0.95);
}


@media screen and (max-width: 768px) {
    .calculator-container {
        flex-direction: column-reverse;
    }

    .operation-overview {
        max-height: 10rem;
        padding: 0.5rem;
    }

    .operation-overview-title {
        margin: 1rem auto;
    }

    .calculation-history,
    .history-title,
    .current-operation-title,
    .operation-preview {
        margin: 0.5rem;
    }


}

